docs: add social

--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>3D Pie Chart Maker</title>
+    <meta name="robots" content="follow, index"/>
+    <meta name="description" content="Trust your instincts and make a glorious 3D pie chart right here in your browser."/>
+    <meta property="og:site_name" content="3D Pie Chart Generator"/>
+    <meta property="og:description" content="Trust your instincts and make a glorious 3D pie chart right here in your browser."/>
+    <meta property="og:title" content="3D Pie Chart Generator"/>
+    <meta property="og:image" content="https://3dpie.peterbeshai.com/3dpie_social.png"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@pbesh"/>
+    <meta name="twitter:title" content="3D Pie Chart Generator"/>
+    <meta name="twitter:description" content="Trust your instincts and make a glorious 3D pie chart right here in your browser."/>
+    <meta name="twitter:image" content="https://3dpie.peterbeshai.com/3dpie_social.png"/>
+    <title>3D Pie Chart Generator</title>
   </head>
   <body>
     <div id="root"></div>
