--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <meta name="twitter:description" content="Trust your instincts and make a glorious 3D pie chart right here in your browser."/>
     <meta name="twitter:image" content="https://3dpie.peterbeshai.com/3dpie_social.png"/>
     <title>3D Pie Chart Generator</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K41DEWHTFH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-K41DEWHTFH');
+    </script>
   </head>
   <body>
     <div id="root"></div>
